[gd_scene load_steps=5 format=3 uid="uid://vvet7yb7thao"]

[ext_resource type="Script" path="res://scripts/user_interface/builder_resize.gd" id="1_1u8ky"]
[ext_resource type="Texture2D" uid="uid://3pa7rasuahih" path="res://assets/scenes/minus.png" id="1_m0kci"]
[ext_resource type="Texture2D" uid="uid://d2o30sudsvfdm" path="res://assets/scenes/plus.png" id="2_dqltn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikv7t"]
bg_color = Color(0.525415, 0.683337, 0.522033, 0.454902)

[node name="LevelInfoQuery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1u8ky")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikv7t")

[node name="Control" type="Control" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinusWidth" type="TextureRect" parent="Background/Control"]
layout_mode = 0
offset_left = -128.0
offset_top = 172.0
offset_bottom = 428.0
mouse_filter = 0
texture = ExtResource("1_m0kci")

[node name="PlusWidth" type="TextureRect" parent="Background/Control"]
layout_mode = 0
offset_left = 600.0
offset_top = 172.0
offset_right = 728.0
offset_bottom = 428.0
mouse_filter = 0
texture = ExtResource("2_dqltn")

[node name="MinusHeight" type="TextureRect" parent="Background/Control"]
layout_mode = 0
offset_left = 172.0
offset_right = 300.0
offset_bottom = 256.0
rotation = 4.71239
mouse_filter = 0
texture = ExtResource("1_m0kci")

[node name="PlusHeight" type="TextureRect" parent="Background/Control"]
layout_mode = 0
offset_left = 172.0
offset_top = 728.0
offset_right = 300.0
offset_bottom = 984.0
rotation = 4.71239
mouse_filter = 0
texture = ExtResource("2_dqltn")

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="gui_input" from="Background/Control" to="." method="_on_control_gui_input"]
[connection signal="gui_input" from="Background/Control/MinusWidth" to="." method="_on_minus_width_gui_input"]
[connection signal="gui_input" from="Background/Control/PlusWidth" to="." method="_on_plus_width_gui_input"]
[connection signal="gui_input" from="Background/Control/MinusHeight" to="." method="_on_minus_height_gui_input"]
[connection signal="gui_input" from="Background/Control/PlusHeight" to="." method="_on_plus_height_gui_input"]
